# serenity-safetensors

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  pyproject.toml
python/serenity_safetensors/: __init__.py  torch.py
src/: diffusers.rs  format_detect.rs  gguf.rs  gguf_dequant.rs  lib.rs  probe.rs  pytorch.rs  quantized_tensor.rs  unified.rs
